--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /.vs/ProjectEvaluation
 /WeightTracker.IntegrationTests/bin/Debug/net6.0
 /WeightTracker.IntegrationTests/obj
+/WeightTracker.IntegrationTests/bin/Release/net6.0
